--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
             android:elevation="5dp"
-            android:text="Medical App Booking"
+            android:text="Медициналық қолданба"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
@@ -39,7 +39,7 @@
             android:layout_below="@+id/tvDesc"
             android:layout_alignStart="@+id/tvDesc"
             android:elevation="5dp"
-            android:text="Регистрация"
+            android:text="Тіркеу"
             android:textColor="@android:color/white"
             android:textSize="28sp"
             android:textStyle="bold" />
@@ -134,7 +134,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_person"
-                                android:hint="Фамилия"
+                                android:hint="Тегі"
                                 android:imeOptions="actionNext"
                                 android:inputType="textPersonName"
                                 android:maxLines="1"
@@ -155,7 +155,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_person"
-                                android:hint="Имя"
+                                android:hint="Аты"
                                 android:imeOptions="actionNext"
                                 android:inputType="textPersonName"
                                 android:maxLines="1"
@@ -176,7 +176,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_location"
-                                android:hint=" Адрес"
+                                android:hint=" Мекенжайы"
                                 android:imeOptions="actionNext"
                                 android:inputType="text"
                                 android:maxLines="1"
@@ -197,7 +197,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_location"
-                                android:hint=" Место работы"
+                                android:hint=" Жұмыс орыны"
                                 android:imeOptions="actionNext"
                                 android:inputType="text"
                                 android:maxLines="1"
@@ -218,7 +218,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_date"
-                                android:hint="Введите дату рождения"
+                                android:hint="Туған күні"
                                 android:imeOptions="actionNext"
                                 android:inputType="textPersonName"
                                 android:maxLines="1"
@@ -239,7 +239,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_email"
-                                android:hint="Электронная почта"
+                                android:hint="Электрондық пошта"
                                 android:imeOptions="actionNext"
                                 android:inputType="textEmailAddress"
                                 android:maxLines="1"
@@ -262,7 +262,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
                                 android:drawableStart="@drawable/ic_password"
-                                android:hint="Пароль"
+                                android:hint="Құпия сөз"
                                 android:imeOptions="actionDone"
                                 android:inputType="textPassword"
                                 android:maxLines="1"
@@ -279,7 +279,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
-                            android:text="Регистрация"
+                            android:text="Тіркеу"
                             android:textColor="@android:color/white"
                             android:textSize="16sp"
                             android:theme="@style/Theme.MaterialComponents.Light"
