--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -44,7 +44,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:gravity="center"
-                        android:text="ВЫберите врача"
+                        android:text="@string/select_doc"
                         android:textAllCaps="true"
                         android:textColor="@color/colorPrimary"
                         android:textSize="19sp"
@@ -55,7 +55,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:gravity="center_vertical"
-                        android:text="Класс процедурного кабинета"
+                        android:text="@string/cabinet"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                         android:textColor="@color/black" />
 
@@ -89,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:gravity="center"
-                        android:text="Время заказа"
+                        android:text="@string/order_time"
                         android:textAllCaps="true"
                         android:textColor="@color/colorPrimary"
                         android:textSize="19sp"
@@ -101,7 +101,7 @@
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_date"
                         android:drawablePadding="20dp"
-                        android:hint="Tanggal Menginap"
+                        android:hint="@string/date_of_stay"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                         android:textColor="@color/black"
                         android:textColorHint="#BACBCF" />
@@ -111,7 +111,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:gravity="center_vertical"
-                        android:text="Время"
+                        android:text="@string/time"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                         android:textColor="@color/black" />
 
@@ -145,7 +145,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:gravity="center"
-                        android:text="Опишите что у вас болит"
+                        android:text="@string/description"
                         android:textAllCaps="true"
                         android:textColor="@color/colorPrimary"
                         android:textSize="19sp"
@@ -157,7 +157,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
                         android:maxLines="10"
-                        android:hint="Опишите пожалуйста"
+                        android:hint="@string/description"
                         android:layout_marginBottom="15sp"/>
 
 
