--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:fontFamily="monospace"
-                android:text="Medical App"
+                android:text="@string/app_name"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
                 android:textStyle="italic" />
@@ -102,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="start"
-                        android:text="Кардиолог, Стаж 18 лет"
+                        android:text="Кардиолог, Тәжірибе 18 жыл"
                         android:textColor="#FF87D1A2"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -161,7 +161,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="start"
-                        android:text="Лор, Стаж 25 лет"
+                        android:text="Лор, Тәжірибе 25 жыл"
                         android:textColor="#FF87D1A2"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -223,7 +223,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="start"
-                        android:text="Хирург, Стаж 28 лет"
+                        android:text="Хирург, Тәжірибе 28 жыл"
                         android:textColor="#FF87D1A2"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -245,7 +245,7 @@
         android:layout_marginLeft="64dp"
         android:layout_marginRight="64dp"
         android:layout_marginBottom="16dp"
-        android:text="записатся"
+        android:text="Жазылу"
         android:textSize="16sp"
         android:theme="@style/Theme.MaterialComponents.Light"
         app:backgroundTint="@color/colorPrimaryDark"
