--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
             android:elevation="5dp"
-            android:text="Medical App Booking"
+            android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
@@ -38,7 +38,7 @@
             android:layout_below="@+id/tvDesc"
             android:layout_alignStart="@+id/tvDesc"
             android:elevation="5dp"
-            android:text="Авторизоваться"
+            android:text="Кіру"
             android:textColor="@android:color/white"
             android:textSize="28sp"
             android:textStyle="bold" />
@@ -184,7 +184,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
-                            android:text="Войти"
+                            android:text="Кіру"
                             android:textColor="@android:color/white"
                             android:textSize="16sp"
                             android:theme="@style/Theme.MaterialComponents.Light"
